increase suggestions container width to align items correctly

--- a/src/pages/Home/index.css
+++ b/src/pages/Home/index.css
@@ -72,7 +72,7 @@
     gap: 12px;
 }
 .search-and-suggestions {
-    width: 30%;
+    width: 34%;
     position: sticky;
     top: 20px;
     bottom: 0;
